[package]
name = "pow"
version = "0.1.0"
authors = ["Maxime Augier <max@xolus.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.10"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
rand = "0.8.3"
hex = "0.4.3"
